# economeve

./: .env  Cargo.toml  diesel-eve.toml  diesel-state.toml
migrations-eve/2023-07-24-115635_primary/: up.sql
migrations-state/2023-08-01-215138_create/: down.sql  up.sql
migrations/2023-07-24-114317_rename/: up.sql
src/: config.rs  config.toml  database.toml  domain.rs  main.rs  models.rs  schema.rs
src/models/: eve.rs  mod.rs  state.rs
src/schema/: state.rs
