[package]
name = "economeve"
version = "0.1.0"
edition = "2021"

[dependencies]
bigdecimal = "0.3.1"
config = "0.13.3"
csv = "1.2.2"
diesel = { version = "2.1.0", features = ["postgres", "numeric"] }
dotenvy = "0.15.7"
eyre = "0.6.8"
serde = { version = "1.0.174", features = ["derive"] }
serde_yaml = "0.9.25"
toml = "0.7.6"
zip = "0.6.6"
