[package]
name = "economeve"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6.19"
bigdecimal = "0.3.1"
config = "0.13.3"
csv = "1.2.2"
diesel = { version = "2.1.0", features = ["postgres", "numeric", "sqlite"] }
directories = "5.0.1"
dotenvy = "0.15.7"
eyre = "0.6.8"
hyper = "0.14.27"
hyper-tls = "0.5.0"
open = "5.0.0"
rfesi = "0.17.0"
serde = { version = "1.0.174", features = ["derive"] }
serde_json = "1.0.104"
serde_yaml = "0.9.25"
tokio = { version = "1.29.1", features = ["full"] }
toml = "0.7.6"
zip = "0.6.6"
